# Oravi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  fish_greeting.fish  fish_prompt.fish  main.cpp  oravi.zsh  oravi.zsh-theme  version.hpp  version.hpp.in
.github/workflows/: development.yml  working.yml
cmake/: Coverage.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCppCheck.cmake  FindGcov.cmake  FindGcovr.cmake  FindLlvmCov.cmake  FindSass.cmake  Format.cmake  StaticAnalysis.cmake
docs/: CMakeLists.txt  INSTALL.md
docs/doxygen/: footer.html  header.html  scss-doxygen.css  scss-search.css  scss-svg.css
docs/doxygen/scss/: doxygen.scss  search.scss  svg.scss
docs/doxygen/scss/config/: colors.scss  typography.scss
docs/doxygen/scss/lib/: include-media.scss
docs/doxygen/scss/util/: fonts.scss  theme.scss
include/: version.hpp.in
include/oravi/: oravi.hpp  version.hpp
source/: CMakeLists.txt  sample.cpp
tests/: CMakeLists.txt  sample.cpp
